--- a/.github/workflows/aio.yml
+++ b/.github/workflows/aio.yml
@@ -23,18 +23,32 @@ jobs:
         uses: asdf-vm/actions/plugin-test@v1
         with:
           command: terraform-docs --version
-          version: v0.10.1
+          version: 0.10.1
 
-  lint:
+  lint_and_tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run the sh-checker
-        uses: luizm/action-sh-checker@v0.1.8
+        uses: luizm/action-sh-checker@v0.1.12
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           #SHELLCHECK_OPTS: -e SC1004 # Optional: exclude some shellcheck warnings.
           SHFMT_OPTS: -i 2 # Optional: pass arguments to shfmt.
         with:
           sh_checker_comment: true
+      - name: Install asdf
+        run: |
+          git clone https://github.com/asdf-vm/asdf.git $HOME/asdf
+
+      - name: Install bats
+        run: |
+          sudo apt-get install bats
+          bats --version
+
+      - name: Test plugin with bats
+        run: |
+          . $HOME/asdf/asdf.sh
+          asdf plugin-add terraform-docs $GITHUB_WORKSPACE
+          bats test
