--- a/.github/workflows/aio.yml
+++ b/.github/workflows/aio.yml
@@ -2,11 +2,11 @@ name: AllInOne
 
 on:
   push:
-    paths-ignore:
-      - '**.md'
+    branches:
+      - master
   pull_request:
-    paths-ignore:
-      - '**.md'
+    branches:
+      - master
 
 jobs:
   plugin_test:
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run the sh-checker
-        uses: luizm/action-sh-checker@v0.1.12
+        uses: luizm/action-sh-checker@v0.7.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           #SHELLCHECK_OPTS: -e SC1004 # Optional: exclude some shellcheck warnings.
